# simulador_receita

./: README.md  pyproject.toml  requirements.txt  simulador.py  simulador_multiplo.py
.devcontainer/: devcontainer.json
