[tool.poetry]
name = "simulador-receita"
version = "0.1.0"
description = ""
authors = ["Eduardo Quelotti <eduardoquelotti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
